--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
 	compileSdkVersion 26
-	buildToolsVersion "25.0.3"
+	buildToolsVersion '26.0.2'
 	defaultConfig {
 		applicationId "ch.ralena.aeonlineschedule"
 		minSdkVersion 19
@@ -17,6 +17,10 @@ android {
 			proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
 		}
 	}
+	compileOptions {
+		sourceCompatibility JavaVersion.VERSION_1_8
+		targetCompatibility JavaVersion.VERSION_1_8
+	}
 }
 
 dependencies {
@@ -25,9 +29,12 @@ dependencies {
 		exclude group: 'com.android.support', module: 'support-annotations'
 	})
 	// Android dependencies
-	compile 'com.android.support:appcompat-v7:26.0.0-alpha1'
-	compile 'com.android.support:design:26.0.0-alpha1'
+	compile 'com.android.support:appcompat-v7:26.1.0'
+	compile 'com.android.support:design:26.1.0'
 	compile 'com.android.support.constraint:constraint-layout:1.0.2'
-	compile 'com.android.support:recyclerview-v7:26.0.0-alpha1'
+	compile 'com.android.support:recyclerview-v7:26.1.0'
 	testCompile 'junit:junit:4.12'
+
+	// Third party
+	compile 'com.jakewharton.threetenabp:threetenabp:1.0.5'
 }
