--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,9 +33,11 @@ dependencies {
 	compile 'com.android.support:appcompat-v7:26.1.0'
 	compile 'com.android.support:design:26.1.0'
 	compile 'com.android.support.constraint:constraint-layout:1.0.2'
+	compile 'com.android.support:cardview-v7:26.1.0'
 	compile 'com.android.support:recyclerview-v7:26.1.0'
 	testCompile 'junit:junit:4.12'
-
+	// Google
+	compile 'com.google.android:flexbox:0.3.1'
 	// Third party
 	compile 'com.jakewharton.threetenabp:threetenabp:1.0.5'
 }
