--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,4 +40,6 @@ dependencies {
 	compile 'com.google.android:flexbox:0.3.1'
 	// Third party
 	compile 'com.jakewharton.threetenabp:threetenabp:1.0.5'
+	compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
+	compile 'io.reactivex.rxjava2:rxjava:2.1.7'
 }
