--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,7 @@ dependencies {
 	})
 	// Android dependencies
 	compile 'com.android.support:appcompat-v7:27.0.2'
+	compile 'com.android.support:preference-v14:27.0.2'
 	compile 'com.android.support:design:27.0.2'
 	compile 'com.android.support.constraint:constraint-layout:1.0.2'
 	compile 'com.android.support:cardview-v7:27.0.2'
