--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,7 +31,6 @@ dependencies {
 	})
 	// Android dependencies
 	compile 'com.android.support:appcompat-v7:27.0.2'
-	compile 'com.android.support:preference-v14:27.0.2'
 	compile 'com.android.support:design:27.0.2'
 	compile 'com.android.support.constraint:constraint-layout:1.0.2'
 	compile 'com.android.support:cardview-v7:27.0.2'
@@ -43,4 +42,7 @@ dependencies {
 	compile 'com.jakewharton.threetenabp:threetenabp:1.0.5'
 	compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
 	compile 'io.reactivex.rxjava2:rxjava:2.1.7'
+	// replace google's broken preference libraries
+	compile 'com.takisoft.fix:preference-v7:27.0.2.0'
+	compile 'com.takisoft.fix:preference-v7-datetimepicker:27.0.2.0'
 }
