--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,7 +42,6 @@ dependencies {
 	compile 'com.jakewharton.threetenabp:threetenabp:1.0.5'
 	compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
 	compile 'io.reactivex.rxjava2:rxjava:2.1.7'
-	// replace google's broken preference libraries
+	// Fix Android's messed up preference libraries
 	compile 'com.takisoft.fix:preference-v7:27.0.2.0'
-	compile 'com.takisoft.fix:preference-v7-datetimepicker:27.0.2.0'
 }
