--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,17 +24,24 @@ android {
 	}
 }
 
+// needed for stetho_realm
+repositories {
+	maven {
+		url 'https://github.com/WickeDev/stetho-realm/raw/master/maven-repo'
+	}
+}
+
 dependencies {
 	compile fileTree(dir: 'libs', include: ['*.jar'])
 	androidTestCompile('com.android.support.test.espresso:espresso-core:2.2.2', {
 		exclude group: 'com.android.support', module: 'support-annotations'
 	})
 	// Android dependencies
-	compile 'com.android.support:appcompat-v7:27.0.2'
-	compile 'com.android.support:design:27.0.2'
+	compile 'com.android.support:appcompat-v7:27.1.0'
+	compile 'com.android.support:design:27.1.0'
 	compile 'com.android.support.constraint:constraint-layout:1.0.2'
-	compile 'com.android.support:cardview-v7:27.0.2'
-	compile 'com.android.support:recyclerview-v7:27.0.2'
+	compile 'com.android.support:cardview-v7:27.1.0'
+	compile 'com.android.support:recyclerview-v7:27.1.0'
 	testCompile 'junit:junit:4.12'
 	// Google
 	compile 'com.google.android:flexbox:0.3.1'
@@ -43,5 +50,8 @@ dependencies {
 	compile 'io.reactivex.rxjava2:rxandroid:2.0.1'
 	compile 'io.reactivex.rxjava2:rxjava:2.1.7'
 	// Fix Android's messed up preference libraries
-	compile 'com.takisoft.fix:preference-v7:27.0.2.0'
+	compile 'com.takisoft.fix:preference-v7:27.1.0.0'
+	// Debugging
+	compile 'com.facebook.stetho:stetho:1.5.0'
+	compile 'com.uphyca:stetho_realm:2.2.2'
 }
