--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 		  package="ch.ralena.aeonlineschedule">
 
+	<uses-permission android:name="android.permission.WAKE_LOCK" />
+
 	<application
 		android:name=".MainApplication"
 		android:allowBackup="true"
@@ -18,6 +20,7 @@
 				<category android:name="android.intent.category.LAUNCHER"/>
 			</intent-filter>
 		</activity>
+		<receiver android:name=".receivers.ClassAlarmReceiver"/>
 	</application>
 
 </manifest>
